// AUTOMATICALLY GENERATED BY SimpleRPC

syntax = "proto3";
import "google/protobuf/empty.proto";
package Catalogpkg;

service Catalog {
    rpc get_products(get_productsRequest) returns (get_productsResponce) {}
    rpc get_product_by_id(get_product_by_idRequest) returns (get_product_by_idResponce) {}
    rpc add_product(add_productRequest) returns (add_productResponce) {}
    rpc get_my_products(get_my_productsRequest) returns (get_my_productsResponce) {}
    rpc get_all_my_products(get_all_my_productsRequest) returns (get_all_my_productsResponce) {}
}

message get_product_by_idRequest {
    int64 productId = 1;
}
message get_my_productsResponce {
    repeated ProductDTO productDTOArray = 1;
}
message get_my_productsRequest {
    int64 userId = 1;
    int64 start = 2;
    int64 count = 3;
    string sort = 4;
}
message get_productsRequest {
    int64 start = 1;
    int64 count = 2;
    string sort = 3;
}
message add_productResponce {
    int64 productId = 1;
}
message get_productsResponce {
    repeated ProductDTO productDTOArray = 1;
}
message get_all_my_productsResponce {
    repeated ProductDTO productDTOArray = 1;
}
message get_all_my_productsRequest {
    int64 userId = 1;
}
message get_product_by_idResponce {
    int64 productId = 1;
    int64 supplierId = 2;
    string title = 3;
    string titleImage = 4;
    int64 cost = 5;
    string description = 6;
}
message ProductDTO {
    int64 productId = 1;
    int64 supplierId = 2;
    string title = 3;
    string titleImage = 4;
    int64 cost = 5;
    string description = 6;
}
message add_productRequest {
    string title = 1;
    string titleImageUrl = 2;
    int64 costNum = 3;
    string description = 4;
    int64 authorId = 5;
}
